All in components

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,16 @@
 // Custom.scss
 //Include all of Bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap";
+html, body, mviewer {
+    height: 100%;
+    width: 100%;
+}
+
+mviewer {
+    display: block;
+}
+
+/*mviewer-map {
+    height: 400px;
+    width: 100%;
+}*/
