Update structure with src folder

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 // Custom.scss
 //Include all of Bootstrap
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/bootstrap";
 html, body, mviewer {
     height: 100%;
     width: 100%;
